openshift/tinyapp.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tinyapp
  labels:
    app: tinyapp
    app.kubernetes.io/component: tinyapp
    app.kubernetes.io/instance: tinyapp
    app.kubernetes.io/name: tinyapp
    app.kubernetes.io/part-of: tinyapp-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tinyapp
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: tinyapp
        deployment: tinyapp
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      containers:
        - name: tinyapp
          image: 'quay.io/siamaksade/tinyapp:v1'
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
            - containerPort: 9779
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tinyapp
  name: tinyapp
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: tinyapp
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tinyapp
  namespace: tiny-app
  labels:
    app: tinyapp
    app.kubernetes.io/part-of: tiny-app
    apps.open-cluster-management.io/reconcile-rate: medium
spec:
  to:
    kind: Service
    name: tinyapp
  tls: null
  port:
    targetPort: 8080
  alternateBackends: []
